# file-upload-share

./: .env.example  .gitignore  README.md  pyproject.toml  run.sh
app/: __init__.py  config.py  main.py
app/modules/: __init__.py  logger.py  uploader.py
app/static/css/: main.css
app/static/js/: main.js
app/templates/: error.html  index.html
